# veloce-research-os

./: .gitignore  .graphifyignore  README.md  SYSTEM_STATUS.md
projects/reliability-policy-matrix/: .env.example  Makefile  README.md  pyproject.toml  week1_day1_3_scaffold.md
projects/reliability-policy-matrix/configs/: access_review_v1_7D.json  agent_runner_v2_0I.json  autonomous_rollback_v2_0E.json  autonomy_controls_v1_8.json  autonomy_readiness_v1_8.json  canary_deploy_v2_0D.json  canary_deploy_v2_0H.json  chat_to_pr_v2_0B.json  chat_to_pr_v2_0G.json  long_running_job_v2_0C.json  matrix.base.yaml  matrix.week1_day1_3.yaml  paperclip_credential_discovery_v3_2.json  paperclip_writeback_v2_0A.json  paperclip_writeback_v2_0F.json  paperclip_writeback_v3_2.json  production_ai_os_v2_6_v3_1.json  production_execution_v2_0.json  production_job_runner_v2_1.json  production_packet_schemas_v2_5.json  rollback_drill_v1_7F.json  stack_health_v1_7C.json
projects/reliability-policy-matrix/manifests/: itbench_subset.jsonl  osworld_subset.jsonl  visualwebarena_subset.jsonl
projects/reliability-policy-matrix/scripts/: agent_runner_proof.py  aggregate_metrics.py  autonomous_rollback_proof.py  autonomy_control_plane.py  autonomy_readiness_gate.py  canary_deploy_proof.py  chat_to_pr_proof.py  long_running_job_proof.py  matrix_plan.py  paperclip_credential_discovery_v3_2.py  paperclip_live_writeback_v3_2.py  paperclip_writeback_proof.py  production_ai_os_pilot_pack.py  production_execution_control_plane.py  production_job_runner.py  rollback_drill.py  run_matrix.py  week1_day1_3.sh  (+2 more)
(+147 files in other folders)
